<?xml version="1.0"?>
<package format="3">
  <name>ros2_fp_core_msgs</name>
  <version>1.0.0</version>
  <description>Core FP messages and services for ROS2 and ROS bridge.</description>
  <maintainer email="user@example.com">ros2_fp_core_msgs maintainer</maintainer>
  <license>Apache-2.0</license>

  <buildtool_depend>ament_cmake</buildtool_depend>
  <buildtool_depend>rosidl_default_generators</buildtool_depend>

  <depend>rosidl_default_runtime</depend>
  <depend>geometry_msgs</depend>

  <member_of_group>rosidl_interface_packages</member_of_group>
  <export>
    <build_type>ament_cmake</build_type>
    <ros1_bridge mapping_rules="mapping_rules.yaml"/>
  </export>
</package>
